# vibe-dj

./: .gitignore  AGENTS.md  Makefile  README.md  agents  code-standards.md  docker-compose.local.yml  package-lock.json  pyproject.toml
agents/: README.md  code-review.md  draft-tech-approach.md  pr-checklist.md  review-plan.md  review-tech-approach.md
apps/api/: .env  .env.example  README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py  002_library_tracks_path_cursor_index.py  003_source_tracks_amazon_candidates_json.py  004_source_tracks_amazon_link_title_score.py  005_spotify_user_connections.py  006_playlists_spotify_playlist_id.py  007_source_tracks_spotify_preview.py  008_source_tracks_manual_dl.py  0ebdf3810e9a_add_playlists_spotify_url.py
apps/api/tests/: conftest.py  test_local_download_scan.py  test_smoke.py  test_spotify_oauth.py  test_spotify_playlist_import.py  test_web_search_service.py  test_youtube_audio_download.py
apps/api/tests/fixtures/: minimal_rekordbox.tsv
apps/api/track_mapper_api/: __init__.py  config.py  deps.py  main.py  repo_src_path.py  schemas.py
apps/api/track_mapper_api/db/: session.py
apps/api/track_mapper_api/models/: __init__.py  library.py  link.py  playlist.py  source.py  spotify_oauth.py
apps/api/track_mapper_api/routers/: library_snapshots.py  library_tracks.py  match.py  playlists.py  source_tracks.py  spotify_oauth.py
apps/api/track_mapper_api/services/: __init__.py  amazon_music_search.py  find_amazon_links.py  library_import.py  library_list.py  link_match_scoring.py  local_download_scan.py  matching.py  playlist_import.py  source_link_actions.py  source_link_broken.py  source_track_wishlist.py  spotify_oauth_service.py  spotify_playlist_import.py  spotify_preview_backfill.py  spotify_web_api.py  web_search_service.py  youtube_audio_download.py
docs/: UI.md  chatgpt_matching_prompt.md  code-standards.md  data-model.md  design-system.md  requirements.md  spec.md  tech-approach.md  top_level_spec.md
playlists/: koko-groove.csv  koko-groove.json
scripts/: make_dj_ready.py  make_wav_version.py  update_from_chatgpt_matches.py  web-search.py
src/: __init__.py  amazon_cache.py  amazon_music.py  amazon_service.py  download_scanner.py  download_tracks.py  library_db.py  mm.py  rekordbox_index.py  rekordbox_parser.py  rekordbox_tsv_parser.py  rekordbox_updater.py  spotify_client.py  track_db.py  track_matcher.py  (+2 more)
(+68 files in other folders)
