[project]
name = "track-mapper-api"
version = "0.1.0"
description = "Track Mapper HTTP API (FastAPI)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.0",
    "beautifulsoup4>=4.12.0",
    "ddgs>=1.0.0",
    "fastapi>=0.115.0",
    "greenlet>=3.0.0",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "rapidfuzz>=3.9.0",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.32.0",
    "yt-dlp>=2025.1.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]

[project.scripts]
track-mapper-api = "track_mapper_api.main:run_dev"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["track_mapper_api"]

[tool.ruff]
line-length = 100
target-version = "py311"
